@@ -96,7 +96,7 @@ void ParseHandler::startObject()
 
 void ParseHandler::endObject()
 {
-	_stack.pop();
+	if (!_stack.empty()) _stack.pop();
 }
 
 
@@ -132,7 +132,7 @@ void ParseHandler::startArray()
 
 void ParseHandler::endArray()
 {
-	_stack.pop();
+	if (!_stack.empty()) _stack.pop();
 }
 
 
